tests/ui/rust-2018/uniform-paths/issue-87932.stderr
error[E0599]: no function or associated item named `deserialize` found for struct `A` in the current scope
  --> $DIR/issue-87932.rs:13:8
   |
LL | pub struct A {}
   | ------------ function or associated item `deserialize` not found for this struct
...
LL |     A::deserialize();
   |        ^^^^^^^^^^^ function or associated item not found in `A`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Deserialize` which provides `deserialize` is implemented but not in scope; perhaps you want to import it
   |
LL + use <crate::A as issue_87932_a::Deserialize>::deserialize::_a::Deserialize;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
